--- a/interface.ui
+++ b/interface.ui
@@ -22,13 +22,6 @@
       </property>
      </widget>
     </item>
-    <item row="3" column="0">
-     <widget class="QLabel" name="StatusLabel">
-      <property name="text">
-       <string>TextLabel</string>
-      </property>
-     </widget>
-    </item>
     <item row="1" column="2">
      <widget class="QPushButton" name="pushButton_3">
       <property name="text">
@@ -64,6 +57,13 @@
      <widget class="QPushButton" name="OptionsButton">
       <property name="text">
        <string>Options</string>
+      </property>
+     </widget>
+    </item>
+    <item row="3" column="0" colspan="3">
+     <widget class="QLabel" name="StatusLabel">
+      <property name="text">
+       <string/>
       </property>
      </widget>
     </item>
